--- a/views/ng-templates/info.jade
+++ b/views/ng-templates/info.jade
@@ -1,17 +1,17 @@
 ng-include(src="'common.html'")
 .col-md-8.tight
 	ng-include(src="'menu.html'")
-		.block
-			.col-sm-12.margined.block-header
-				h3 Revision 
-					span.block-header-project-name {{Data.CurrentRevision.name}}
-					span.block-header-by by
-					span.block-header-author {{Data.CurrentRevision.author}}
-					span.commit-date-title {{Data.CurrentRevision.date}}
-			p {{Data.CurrentRevision.message}}
-		.block
-			.col-sm-12.margined.block-header
-				h3 Readme
-			// Display the processed markdown from readme
-			div(markdown='Data.Readme.readme')
+	.block
+		.col-sm-12.margined.block-header
+			h3 Revision 
+				span.block-header-project-name {{Data.CurrentRevision.name}}
+				span.block-header-by by
+				span.block-header-author {{Data.CurrentRevision.author}}
+				span.commit-date-title {{Data.CurrentRevision.date}}
+		p {{Data.CurrentRevision.message}}
+	.block
+		.col-sm-12.margined.block-header
+			h3 Readme
+		// Display the processed markdown from readme
+		div(markdown='Data.Readme.text')
 
