--- a/views/ng-templates/mainpage.jade
+++ b/views/ng-templates/mainpage.jade
@@ -1,12 +1,14 @@
-#wrap
-	.treeview
-		#scenetree
-	div#meta-popup.draggable.ui-widget-content
-		div#metadata
-	x3d#viewer(xmlns='http://www.web3d.org/specification/x3d-namespace' ng-non-bindable)
-		scene#mainScene(onbackgroundclicked='bgroundClick(event);')
-			viewpoint#sceneVP()
-			navigationInfo#nav 
-			inline#masterInline(namespacename="model", onload="onLoadedEvent();")
-	div(ui-view="footer")
+.container-fluid
+	.row
+		.treeview
+			#scenetree
+		div#meta-popup.draggable.ui-widget-content
+			div#metadata
+		x3d#viewer(xmlns='http://www.web3d.org/specification/x3d-namespace' ng-non-bindable)
+			scene#mainScene(onbackgroundclicked='bgroundClick(event);')
+				viewpoint#sceneVP()
+				navigationInfo#nav 
+				inline#masterInline(namespacename="model", onload="onLoadedEvent();")
+	.row.mainrow
+		div(ui-view="footer")
 
