--- a/views/waypoint.jade
+++ b/views/waypoint.jade
@@ -7,19 +7,6 @@ html(lang="en")
 
 		title 3D Repo 
 
-		script.
-			var realOpen = XMLHttpRequest.prototype.open;
-			var realSend = XMLHttpRequest.prototype.send;
-			
-			XMLHttpRequest.prototype.open = function(method, url, async, unk1, unk2) {
-				this.withCredentials = true;
-				realOpen.apply(this, arguments);
-			};
-
-			XMLHttpRequest.prototype.send = function(body) {
-				realSend.apply(this, arguments);
-			};
-
 		script(src='/public/js/config.js')
 
 		link(rel='stylesheet' type='text/css' href='#{x3domcss}')
@@ -52,10 +39,20 @@ html(lang="en")
 		script(type="text/javascript" src="#{bootstrapselectjs}")
 		link(rel='stylesheet', href="#{bootstrapselectcss}" type="text/css")
 
-		script(src='/public/js/controlinterface.js')
-		script(src='/public/js/waypoint.js')
-		script(src='/public/js/custom_keys.js')
-		script(src='/public/js/waypoint_angular.js')
+		script(type="text/javascript" src='/public/js/controlinterface.js')
+		script(type="text/javascript" src='/public/js/waypoint.js')
+		script(type="text/javascript" src='/public/js/custom_keys.js')
+
+		script.
+			angular.module('3drepo', ['ui.router', 'ui.bootstrap', 'angular-bootstrap-select']);
+
+		script(type="text/javascript" src="/public/js/angularjs/boilerplate/pageConfigProvider.js")
+		script(type="text/javascript" src="/public/js/angularjs/boilerplate/serverConfig.js")
+
+		script(type="text/javascript" src="/public/js/angularjs/waypoint.js")
+		script(type="text/javascript" src="/public/js/angularjs/waypointPageConfig.js")
+		script(type="text/javascript" src="/public/js/angularjs/boilerplate/Auth.js")
+		script(type="text/javascript" src="/public/js/angularjs/controllers/LoginCtrl.js")
 
 		script.
 			$(function() {
