--- a/views/ng-templates/mainpage.jade
+++ b/views/ng-templates/mainpage.jade
@@ -4,7 +4,7 @@
 			#scenetree
 		div#meta-popup.draggable.ui-widget-content
 			div#metadata
-		x3d#viewer(xmlns='http://www.web3d.org/specification/x3d-namespace' ng-non-bindable)
+		x3d#viewer(xmlns='http://www.web3d.org/specification/x3d-namespace' ng-non-bindable, disableDoubleClick='true')
 			scene#mainScene(onbackgroundclicked='bgroundClick(event);')
 				viewpoint#sceneVP()
 				navigationInfo#nav 
