--- a/views/frontend.jade
+++ b/views/frontend.jade
@@ -22,11 +22,9 @@ html(lang="en" ng-app="3drepo")
 		script(type="text/javascript" src='#{angularjs}')
 		script(type="text/javascript" src='#{angularutilsjs}')
 		script(type="text/javascript" src='#{angularrouterjs}')
-		script(type="text/javascript" src='#{x3dcontroller}')
-		script(type="text/javascript" src='#{threedrepoapp}')
-		script(type="text/javascript" src='#{uibootstrap}')
-		//script(type="text/javascript" src='#{chartjs}')
 		link(rel='stylesheet' type='text/css' href='#{fontawesomecss}')
+		script(type="text/javascript" src="#{uibootstrap}")
+
 
 		script(type="text/javascript" src="/public/js/controlinterface.js")
 		script(type="text/javascript" src="/public/js/config.js")
