--- a/views/ng-templates/waypoint_mainpage.jade
+++ b/views/ng-templates/waypoint_mainpage.jade
@@ -1,8 +1,3 @@
-x3d#viewer(xmlns='http://www.web3d.org/specification/x3d-namespace', keysEnabled='false', disableDoubleClick='true')
+div#x3d.waypoint-viewport
 	include waypoint_readme
 	include waypoint_vis_controls
-	scene(onbackgroundclicked='bgroundClick(event);')
-		viewpoint#sceneVP
-		navigationInfo#nav
-		inline(ng-init='x3domreload()', namespacename='model', url="{{iFrameURL.url}}")
-
