--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -234,8 +234,17 @@ span.fancytree-title:hover {
     margin: 0;
 }
 
-.viewport {
-    height: 100%;
+.waypoint-viewport {
+    position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+}
+
+.project-viewport {
+	width: 100%;
+	height: 600px;
 }
 
 .treerow{
@@ -313,7 +322,7 @@ span.fancytree-title:hover {
 .viewport,
 #viewer{
 	width:100%;
-	height: 600px;
+	height: 100%;
 	border:0px;
 	display: block;
 }
