--- a/views/ng-templates/mainpage.jade
+++ b/views/ng-templates/mainpage.jade
@@ -4,11 +4,6 @@
 			#scenetree
 		div#meta-popup.draggable.ui-widget-content
 			div#metadata
-		x3d#viewer(xmlns='http://www.web3d.org/specification/x3d-namespace' ng-non-bindable, disableDoubleClick='true')
-			scene#mainScene(onbackgroundclicked='bgroundClick(event);')
-				viewpoint#sceneVP()
-				navigationInfo#nav 
-				inline#masterInline(namespacename="model", onload="onLoadedEvent();")
+		div#x3d.project-viewport
 	.row.mainrow
 		div(ui-view="footer")
-
