ISSUE #33 - Various bug fixes, Oculus integration, waypoint fixes, 	    proper lighting

--- a/views/frontend.jade
+++ b/views/frontend.jade
@@ -31,6 +31,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 		script(type="text/javascript" src="/public/js/tree.js")
 		script(type="text/javascript" src="/public/js/floatingmeta.js")
 		script(type="text/javascript" src="/public/js/viewer.js")
+		script(type="text/javascript" src="/public/js/oculus.js")
 
 		script.
 			angular.module('3drepo', ['ui.router', 'ui.bootstrap']);
