ISSUE #33 - Login fix changes

--- a/views/frontend.jade
+++ b/views/frontend.jade
@@ -8,6 +8,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 		title 3D Repo 
 
 		link(rel='stylesheet' type='text/css' href='#{x3domcss}')
+		script(type="text/javascript" src='#{ammojs}')
 		script(type="text/javascript" src='#{x3domjs}')
 		script(type="text/javascript" src="#{jqueryjs}")
 		link(rel='stylesheet', href="#{jqueryuicss}")
@@ -39,6 +40,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 		script(type="text/javascript" src='/public/js/angularjs/boilerplate/pageConfigProvider.js')
 
 		script(type="text/javascript" src="/public/js/angularjs/boilerplate/serverConfig.js")
+		script(type="text/javascript" src="/public/js/angularjs/boilerplate/httpProvider.js")
 
 		script(type="text/javascript" src="/public/js/angularjs/data/Users.js")
 		script(type="text/javascript" src="/public/js/angularjs/data/UserData.js")
@@ -56,9 +58,9 @@ html(lang="en" ng-app="3drepo").ng-scope
 
 		script(type="text/javascript" src="/public/js/angularjs/data/Data.js")
 
+		script(type="text/javascript" src="/public/js/angularjs/boilerplate/Auth.js")
 		script(type="text/javascript" src="/public/js/angularjs/project.js")
 		script(type="text/javascript" src="/public/js/angularjs/projectPageConfig.js")
-		script(type="text/javascript" src="/public/js/angularjs/boilerplate/Auth.js")
 
 		script(type="text/javascript" src="/public/js/angularjs/controllers/LoginCtrl.js")
 		script(type="text/javascript" src="/public/js/angularjs/controllers/SearchCtrl.js")
