--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -194,7 +194,7 @@ nav.navbar.transparent.navbar-inverse.navbar-fixed-top {
 //    height: calc(100% - 50px);  
 //    max-height: calc(100% - 50px);  
 	max-height: 600px;
-    max-width: 30%;
+    /*max-width: 30%;*/
 }
 .treeview-header{
     text-align: center;
@@ -244,7 +244,7 @@ span.fancytree-title:hover {
 
 .project-viewport {
 	width: 100%;
-	height: 600px;
+	height: 100%;
 }
 
 .treerow{
@@ -1039,3 +1039,33 @@ img.loading{
 	color: lightcoral;
 }
 
+/***** UIv2 elements *****/
+#ui2-treeview {
+	position: fixed;
+	bottom: 82px;
+	left: 0;
+	width: 25%;
+	height: calc(100% - 60px - 82px);
+	background-color: rgba(255, 255, 255, 0.5);
+}
+
+#ui2-treeview.collapsed {
+	height: 0;
+}
+
+#ui2-treeview.collapsed .treeview {
+	display: none;
+}
+
+#ui2-treeview-collapse-btn {
+	color: #ffffff;
+	background-color: rgba(0, 0, 0, 0.7);
+	width: 30px;
+	padding: 6px 6px;
+	text-align: center;
+}
+
+#ui2-treeview.collapsed #ui2-treeview-collapse-btn {
+	position: relative;
+	top: -32px;
+}
