--- a/views/ng-templates/header.jade
+++ b/views/ng-templates/header.jade
@@ -1,4 +1,4 @@
-.header
+header
 	.container-fluid
 		.row
 			.navbar-header
@@ -8,17 +8,23 @@
 					span.icon-bar
 					span.icon-bar
 				a.navbar-brand.logo-pad.header-logo(href="#", ng-click="goDefault()")
-					img.v-expand(src='/public/images/logo.png')
+					img.v-expand(src='/public/images/3drepo-logo-white.png')
 			nav.collapse.navbar-collapse.bs-navbar-collapse(role='navigation')
-				form.navbar-left.tight.v-expand(role='search')
-					.form-group.tight
-						input#search-box.form-control(type='text', ng-model="asyncSelected", placeholder="Search 3D Repo", typeahead="thing for thing in getThings($viewValue)", typeahead-loading="Searching")
 				//a(href='http://blog.getbootstrap.com') Enterprise
-				form.navbar-left.tight.v-expand(role='login')
+				form.pull-right.tight.v-expand(role='login')
 					.form-group.tight#loginButtons
-						button.v-expand.btn.btn-danger.pull-left(ng-hide='!loggedIn', ng-click="logOut()") Log Out
-						button.v-expand.btn.btn-success.pull-left(ng-hide='loggedIn', ng-click="loginPage()") Login
-						button.v-expand.btn.btn-success.pull-left(ng-hide='loggedIn', ng-click="signupPage()") Sign Up
+						button.btn
+							i.fa.fa-search
+						button.btn
+							i.fa.fa-user(ng-hide='!loggedIn', ng-click="goDefault()")
+						button.btn
+							i.fa.fa-sign-out(ng-hide='!loggedIn', ng-click="logOut()")
+
+						// button.v-expand.btn.btn-success.pull-left(ng-hide='loggedIn', ng-click="loginPage()") Login
+						// button.v-expand.btn.btn-success.pull-left(ng-hide='loggedIn', ng-click="signupPage()") Sign Up
+				//form.pull-right.tight.v-expand(role='search')
+				//	.form-group.tight
+				//		input#search-box.form-control(type='text', ng-model="asyncSelected", placeholder="Search 3D Repo", typeahead="thing for thing in getThings($viewValue)", typeahead-loading="Searching")
 				//span.clearfix
 					a(href='http://blog.getbootstrap.com')
 						img(src='/public/images/en.gif', height='16')
