--- a/views/ng-templates/mainpage.jade
+++ b/views/ng-templates/mainpage.jade
@@ -5,10 +5,17 @@
 		div#x3d.project-viewport
 	.ui2
 		#ui2-treeview
-			div#ui2-treeview-collapse-btn
+			div#ui2-treeview-collapse-btn.panel-collapse-btn.pull-right
 				i.fa.fa-list
+				.arrow-left
 			.treeview
 				#scenetree
+		#ui2-metadata
+			div#ui2-metadata-collapse-btn.panel-collapse-btn
+				i.fa.fa-tag
+				.arrow-right
+
+
 
 //	.row.mainrow
 //		div(ui-view="footer")
