--- a/views/ng-templates/menu.jade
+++ b/views/ng-templates/menu.jade
@@ -1,14 +1,14 @@
 .col-md12.margin-bottom
-	ul.nav.nav-tabs.nav(role='tablist')
+	ul.nav.nav-tabs.nav.bottom-tabs(role='tablist')
 		li(ng-class="{'active': isView('info')}")
 			a.dashboard-tab(ng-click="go('info')")
 				i.fa.fa-info-circle.menu-icon
 				| Info
 		// <li ng-class="{'active': isView('comments')}"><a class="dashboard-tab" ng-click="go('comments')"><i class="fa fa-comments menu-icon"></i>Comments <span class="badge">{{data.current_revision.n_comments}}</span></a></li> //
 		li(ng-class="{'active': isView('revisions')}")
-			a.dashboard-tab(ng-click="go('revisions')") 
+			a.dashboard-tab(ng-click="go('revisions')")
 				i.fa.fa-tag.menu-icon
-				| Revisions 
+				| Revisions
 				span.badge {{data.current_branch.n_revisions}}
 		li(ng-class="{'active': isView('log')}")
 			a.dashboard-tab(ng-click="go('log')")
