ISSUE #36 Capitalized bottom tab names

--- a/views/ng-templates/menu.jade
+++ b/views/ng-templates/menu.jade
@@ -3,19 +3,19 @@
 		li(ng-class="{'active': isView('info')}")
 			a.dashboard-tab(ng-click="go('info')")
 				i.fa.fa-info-circle.menu-icon
-				| Info
+				| INFO
 		// <li ng-class="{'active': isView('comments')}"><a class="dashboard-tab" ng-click="go('comments')"><i class="fa fa-comments menu-icon"></i>Comments <span class="badge">{{data.current_revision.n_comments}}</span></a></li> //
 		li(ng-class="{'active': isView('revisions')}")
 			a.dashboard-tab(ng-click="go('revisions')")
 				i.fa.fa-tag.menu-icon
-				| Revisions
+				| REVISIONS
 				span.badge {{data.current_branch.n_revisions}}
 		li(ng-class="{'active': isView('log')}")
 			a.dashboard-tab(ng-click="go('log')")
 				i.fa.fa-save.menu-icon
-				| Log
+				| LOG
 		li(ng-class="{'active': isView('settings')}")
 			a.dashboard-tab(ng-click="go('settings')")
 				i.fa.fa-gear.menu-icon
-				| Settings
+				| SETTINGS
 
