--- a/views/ng-templates/header.jade
+++ b/views/ng-templates/header.jade
@@ -9,6 +9,16 @@ header
 					span.icon-bar
 				a.navbar-brand.logo-pad.header-logo(href="#", ng-click="goDefault()")
 					img.v-expand(src='/public/images/3drepo-logo-white.png')
+			#nav-version-control
+				span.nav-project-title  <b>OSTFed</b>
+				span.branch
+					i.fa.fa-code-fork
+					|  <b>BRANCH:</b> master&nbsp;
+					i.fa.fa-caret-down
+				span.revision
+					i.fa.fa-tag
+					|  <b>REVISION:</b> 3CF11644-975f-B...&nbsp;
+					i.fa.fa-caret-down
 			nav.collapse.navbar-collapse.bs-navbar-collapse(role='navigation')
 				//a(href='http://blog.getbootstrap.com') Enterprise
 				form.pull-right.tight.v-expand(role='login')
