--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -34,8 +34,9 @@ body {
 	height:1000;
 	//overflow: hidden;
     margin : 0;
+    margin-top: 60px;
     padding : 0;
-          -webkit-touch-callout: none;
+  	-webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
