--- a/views/ng-templates/header.jade
+++ b/views/ng-templates/header.jade
@@ -1,6 +1,6 @@
-header
+header.navbar.navbar-fixed-top
 	.container-fluid
-		.row
+		.row-fluid
 			.navbar-header
 				button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='.bs-navbar-collapse')
 					span.sr-only Toggle navigation
